# rust_ad_vatar

./: Cargo.toml  LICENSE  README.md
src/: main.rs
